--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,61 @@
+@font-face{
+  src: url(Font/ARCADE.TTF);
+  font-family: Arcade;
+}
+
+*{
+  font-family: Arcade;
+}
+
+#calculator-container{
+  height: 95vh;
+  width: 1000px;
+  border-radius: 50px;
+  background-color: #1A2E4F;
+  box-shadow: 0 30px 31px 8px rgba(0,0,0,0.5);
+
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+.square-calculator{
+  width: 155px;
+  border-radius: 10px;
+  position: relative;
+}
+
+.result-container {
+  text-align: right;
+  display: flex;
+  height: 205px;
+  width: 55rem;
+  border-radius: 50px;
+  background: radial-gradient(circle, #5C8B59 100%, #75A47F 0%);
+  box-shadow: 0 2px 20px 5px rgba(0,0,0,0.5);
+  margin-left: 3.5rem;
+  position: absolute;
+  top: 3em;
+
+}
+
+.result-container h1{
+  height: 165px;
+  color: #FFF;
+  font-family: Arcade;
+  font-size: 200px;
+  line-height: 100%;
+  text-align: right;
+  width: 100%;
+  margin-top: 25px;
+  margin-left: -20px;
+  word-wrap: break-word;
+}
+
+
+
 #calculator{
     display: grid;
     block-size: auto;
@@ -5,60 +63,64 @@
     height: 97.5vh;
     border: solid 2px red;
 }
+  
+  .buttons1, .buttons2{
+    margin-top: 17rem;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(4, 1fr);
+    grid-column-gap: 2rem;
+    grid-row-gap: 2rem;
+    border: solid red 2px;
+  }
 
-.NumbersVAL1 {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: repeat(1, 1fr);
-  grid-column-gap: 0px;
-  grid-row-gap: 0.5rem;
-  place-content: center;
-}
+  .NbrBtn button{
+    color: white;
+    height: 13rem;
+    width: 13rem;
+    margin-left: 0.5rem;
+    border: none;
+    border-radius: 50px;
+    background-color: #263C60;
+    color: #B8B8B8;
+    font-family: Arcade;
+    font-size: 200px;
+    line-height: 240px;
+    text-align: center;
+    border: solid 3px #263C60;
 
-.div1 {
-  grid-area: 1 / 1 / 2 / 2;
-}
-.div2 {
-  grid-area: 2 / 1 / 3 / 2;
-}
-.div3 {
-  grid-area: 2 / 2 / 3 / 3;
-}
-.div4 {
-  grid-area: 1 / 2 / 2 / 3;
-}
-.div5 {
-  grid-area: 1 / 3 / 2 / 4;
-}
-.div6 {
-  grid-area: 2 / 3 / 3 / 4;
-}
-.div7 {
-  grid-area: 3 / 3 / 4 / 4;
-}
-.div8 {
-  grid-area: 3 / 2 / 4 / 3;
-}
-.div9 {
-  grid-area: 3 / 1 / 4 / 2;
-}
-.div0 {
-  grid-area: 4 / 2 / 5 / 3;
-}
+  }
 
-.divdot{
-  grid-area: 4 / 5 / 5 / 3;
-}
+  .NbrBtn button:hover{
+    border: solid 3px #B8B8B8;
+    transition: linear 0.2s;
+    box-shadow: 0 10px 20px 1px rgba(0,0,0,0.5);
+    transform: translateY(-1%);
+  }
 
-.NumbersVAL2{
-    display: none;
-}
+
+  .div2 { grid-area: 2 / 1 / 3 / 2; }
+  .div3 { grid-area: 3 / 1 / 4 / 2; }
+  .div4 { grid-area: 4 / 1 / 5 / 2; }
+  .div5 { grid-area: 4 / 2 / 5 / 3; }
+  .div6 { grid-area: 3 / 2 / 4 / 3; }
+  .div7 { grid-area: 2 / 2 / 3 / 3; }
+  .div8 { grid-area: 1 / 2 / 2 / 3; }
+  .div9 { grid-area: 1 / 3 / 2 / 4; }
+  .div10 { grid-area: 2 / 3 / 3 / 4; }
+  .div11 { grid-area: 3 / 3 / 4 / 4; }
+  .div12 { grid-area: 4 / 3 / 5 / 4; }
+  .div13 { grid-area: 4 / 4 / 5 / 5; }
+  .div14 { grid-area: 3 / 4 / 4 / 5; }
+  .div15 { grid-area: 2 / 4 / 3 / 5; }
+  .div16 { grid-area: 1 / 4 / 2 / 5; }
 
 input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button {
 -webkit-appearance: none;
 margin: 0;
 }
+
 
 input {
   border: 0px solid white;
