--- a/styles.css
+++ b/styles.css
@@ -12,12 +12,11 @@
 }
 
 #calculator-container{
-  height: 95vh;
-  width: 1000px;
+  width: 62.5rem;
   border-radius: 50px;
   background-color: #1A2E4F;
   box-shadow: 0 30px 31px 8px rgba(0,0,0,0.5);
-
+  text-overflow: hi;
   position: absolute;
   left: 50%;
   top: 50%;
@@ -25,11 +24,45 @@
   transform: translate(-50%, -50%);
 }
 
-.square-calculator{
-  width: 155px;
-  border-radius: 10px;
-  position: relative;
+
+
+.ClearANDResetDiv{
+  width: 10%;
+ 
 }
+
+.ClearANDResetDiv .clearinput{
+  width: 100%;
+  height: 50%;
+  border-radius: 50% 0% 0% 0%;
+  border: none;
+  background-color: #FF3E3E;
+  color: white;
+  font-size: 3rem;
+  line-height: 7.5rem;
+}
+
+.ClearANDResetDiv .clearinput:hover{
+  background-color: #cf3232;
+  transition: linear 0.2s;
+}
+
+.ClearANDResetDiv .ResetAllData{
+  width: 100%;
+  height: 50%;
+  border-radius: 0% 0% 0% 50%;
+  border: none;
+  background-color: #FF3E3E;
+  color: white;
+  font-size: 3rem;
+  line-height: 7.5rem;
+}
+
+.ClearANDResetDiv .ResetAllData:hover{
+  background-color: #cf3232;
+  transition: linear 0.2s;
+}
+
 
 .result-container {
   text-align: right;
@@ -54,8 +87,9 @@
   text-align: right;
   width: 100%;
   margin-top: 25px;
-  margin-left: -20px;
+  word-break: break-all; 
   word-wrap: break-word;
+  text-shadow: 0px 2px 7px #000000;
 }
 
 
@@ -75,22 +109,26 @@
     grid-template-rows: repeat(4, 1fr);
     grid-column-gap: 2rem;
     grid-row-gap: 2rem;
-    border: solid red 2px;
+
+    justify-items: center;
+  }
+
+  .parent{
+    margin: 1rem;
   }
 
   .NbrBtn button{
     color: white;
-    height: 13rem;
-    width: 13rem;
+    height: 8.3rem;
+    width: 8.5rem;
     margin-left: 0.5rem;
     border: none;
     border-radius: 50px;
     background-color: #263C60;
     color: #B8B8B8;
     font-family: Arcade;
-    font-size: 200px;
-    line-height: 240px;
-    text-align: center;
+    font-size: 8rem;
+    line-height: 10rem;
     border: solid 3px #263C60;
 
   }
@@ -143,7 +181,7 @@ input {
   margin: 0 0 10px 0;
 }
 
-#buttons2{
+.buttons2{
   display: none;
 }
 
