--- a/styles.css
+++ b/styles.css
@@ -1,183 +1,204 @@
-@font-face{
+@font-face {
   src: url(Font/ARCADE.TTF);
   font-family: Arcade;
 }
 
-*{
+* {
   font-family: Arcade;
 }
 
+#center {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
-.calculator-box{
+.calculator-box {
   visibility: none;
 }
 
-#calculator-container{
+#calculator-container {
   border-radius: 50px;
-  background-color: #1A2E4F;
-  box-shadow: 0 30px 31px 8px rgba(0,0,0,0.5);
+  background-color: #1a2e4f;
+  box-shadow: 0 30px 31px 8px rgba(0, 0, 0, 0.5);
   text-overflow: hi;
-  position: absolute;
-
 
 }
 
-
-.ClearANDResetDiv{
+.ClearANDResetDiv {
   width: 10%;
 }
 
-.ClearANDResetDiv .clearinput{
+.ClearANDResetDiv .clearinput {
   width: 100%;
   height: 50%;
   border-radius: 50% 0% 0% 0%;
   border: none;
-  background-color: #FF3E3E;
+  background-color: #ff3e3e;
   color: white;
   font-size: 2.5rem;
   line-height: 7.5rem;
 }
 
-.ClearANDResetDiv .clearinput:hover{
+.ClearANDResetDiv .clearinput:hover {
   background-color: #cf3232;
   transition: linear 0.2s;
 }
 
-.ClearANDResetDiv .ResetAllData{
+.ClearANDResetDiv .ResetAllData {
   width: 100%;
   height: 50%;
   border-radius: 0% 0% 0% 50%;
   border: none;
-  background-color: #FF3E3E;
+  background-color: #ff3e3e;
   color: white;
-  font-size: 2.0rem;
+  font-size: 2rem;
   line-height: 7.5rem;
 }
 
-.ClearANDResetDiv .ResetAllData:hover{
+.ClearANDResetDiv .ResetAllData:hover {
   background-color: #cf3232;
   transition: linear 0.2s;
 }
-
 
 .result-container {
   text-align: right;
   display: flex;
   height: 205px;
-  width: 85%;
+  width: 37.5rem;
   border-radius: 50px;
-  background: radial-gradient(circle, #5C8B59 100%, #75A47F 0%);
-  box-shadow: 0 2px 20px 5px rgba(0,0,0,0.5);
+  background: radial-gradient(circle, #5c8b59 100%, #75a47f 0%);
+  box-shadow: 0 2px 20px 5px rgba(0, 0, 0, 0.5);
   margin-left: 3.5rem;
   position: absolute;
   top: 3em;
-
 }
 
-.result-container h1{
+.result-container h1 {
   height: 165px;
-  color: #FFF;
+  color: #fff;
   font-family: Arcade;
   font-size: 200px;
   line-height: 100%;
   text-align: right;
   width: 100%;
   margin-top: 25px;
-  word-break: break-all; 
+  word-break: break-all;
   word-wrap: break-word;
   text-shadow: 0px 2px 7px #000000;
 }
 
-
-
-#calculator{
-    display: grid;
-    block-size: auto;
-    place-content: center;
-    height: 97.5vh;
-    border: solid 2px red;
-}
-  
-  .buttons1, .buttons2{
-    margin-top: 17rem;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-column-gap: 2rem;
-    grid-row-gap: 2rem;
-
-    justify-items: center;
-  }
-
-  .parent{
-    margin: 1rem;
-  }
-
-  .NbrBtn button{
-    color: white;
-    height: 8.3rem;
-    width: 8.5rem;
-    margin-left: 0.5rem;
-    border: none;
-    border-radius: 50px;
-    background-color: #263C60;
-    color: #B8B8B8;
-    font-family: Arcade;
-    font-size: 8rem;
-    line-height: 10rem;
-    border: solid 3px #263C60;
-
-  }
-
-  .NbrBtn button:hover{
-    border: solid 3px #B8B8B8;
-    transition: linear 0.2s;
-    box-shadow: 0 10px 20px 1px rgba(0,0,0,0.5);
-    transform: translateY(-1%);
-  }
-
-
-  .div2 { grid-area: 2 / 1 / 3 / 2; }
-  .div3 { grid-area: 3 / 1 / 4 / 2; }
-  .div4 { grid-area: 4 / 1 / 5 / 2; }
-  .div5 { grid-area: 4 / 2 / 5 / 3; }
-  .div6 { grid-area: 3 / 2 / 4 / 3; }
-  .div7 { grid-area: 2 / 2 / 3 / 3; }
-  .div8 { grid-area: 1 / 2 / 2 / 3; }
-  .div9 { grid-area: 1 / 3 / 2 / 4; }
-  .div10 { grid-area: 2 / 3 / 3 / 4; }
-  .div11 { grid-area: 3 / 3 / 4 / 4; }
-  .div12 { grid-area: 4 / 3 / 5 / 4; }
-  .div13 { grid-area: 4 / 4 / 5 / 5; }
-  .div14 { grid-area: 3 / 4 / 4 / 5; }
-  .div15 { grid-area: 2 / 4 / 3 / 5; }
-  .div16 { grid-area: 1 / 4 / 2 / 5; }
-
-input[type=number]::-webkit-inner-spin-button,
-input[type=number]::-webkit-outer-spin-button {
--webkit-appearance: none;
-margin: 0;
+#calculator {
+  display: grid;
+  block-size: auto;
+  place-content: center;
+  height: 97.5vh;
+  border: solid 2px red;
 }
 
+.buttons1,
+.buttons2 {
+  margin-top: 17rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+  grid-column-gap: 2rem;
+  grid-row-gap: 2rem;
+
+  justify-items: center;
+}
+
+.parent {
+  margin: 1rem;
+}
+
+.NbrBtn button {
+  color: white;
+  height: 8.3rem;
+  width: 8.5rem;
+  margin-left: 0.5rem;
+  border: none;
+  border-radius: 50px;
+  background-color: #263c60;
+  color: #b8b8b8;
+  font-family: Arcade;
+  font-size: 8rem;
+  line-height: 10rem;
+  border: solid 3px #263c60;
+}
+
+.NbrBtn button:hover {
+  border: solid 3px #b8b8b8;
+  transition: linear 0.2s;
+  box-shadow: 0 10px 20px 1px rgba(0, 0, 0, 0.5);
+  transform: translateY(-1%);
+}
+
+.div2 {
+  grid-area: 2 / 1 / 3 / 2;
+}
+.div3 {
+  grid-area: 3 / 1 / 4 / 2;
+}
+.div4 {
+  grid-area: 4 / 1 / 5 / 2;
+}
+.div5 {
+  grid-area: 4 / 2 / 5 / 3;
+}
+.div6 {
+  grid-area: 3 / 2 / 4 / 3;
+}
+.div7 {
+  grid-area: 2 / 2 / 3 / 3;
+}
+.div8 {
+  grid-area: 1 / 2 / 2 / 3;
+}
+.div9 {
+  grid-area: 1 / 3 / 2 / 4;
+}
+.div10 {
+  grid-area: 2 / 3 / 3 / 4;
+}
+.div11 {
+  grid-area: 3 / 3 / 4 / 4;
+}
+.div12 {
+  grid-area: 4 / 3 / 5 / 4;
+}
+.div13 {
+  grid-area: 4 / 4 / 5 / 5;
+}
+.div14 {
+  grid-area: 3 / 4 / 4 / 5;
+}
+.div15 {
+  grid-area: 2 / 4 / 3 / 5;
+}
+.div16 {
+  grid-area: 1 / 4 / 2 / 5;
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 
 input {
   border: 0px solid white;
-  width: 10%; 
-  -webkit-box-shadow: 
-    inset 0 0 8px  rgba(0,0,0,0.1),
-          0 0 16px rgba(0,0,0,0.1); 
-  -moz-box-shadow: 
-    inset 0 0 8px  rgba(0,0,0,0.1),
-          0 0 16px rgba(0,0,0,0.1); 
-  box-shadow: 
-    inset 0 0 8px  rgba(0,0,0,0.1),
-          0 0 16px rgba(0,0,0,0.1); 
+  width: 10%;
+  -webkit-box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.1),
+    0 0 16px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.1), 0 0 16px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 0 8px rgba(0, 0, 0, 0.1), 0 0 16px rgba(0, 0, 0, 0.1);
   padding: 5px;
-  background: rgba(255,255,255,0.5);
+  background: rgba(255, 255, 255, 0.5);
   margin: 0 0 10px 0;
 }
 
-.buttons2{
+.buttons2 {
   display: none;
 }
-
