--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 
 * {
   font-family: Arcade;
+
 }
 
 #center {
@@ -32,13 +33,12 @@
 
 .ClearANDResetDiv .clearinput {
   width: 100%;
-  height: 50%;
   border-radius: 50% 0% 0% 0%;
   border: none;
   background-color: #ff3e3e;
   color: white;
   font-size: 2.5rem;
-  line-height: 7.5rem;
+  height: 50%;
 }
 
 .ClearANDResetDiv .clearinput:hover {
@@ -48,13 +48,12 @@
 
 .ClearANDResetDiv .ResetAllData {
   width: 100%;
-  height: 50%;
   border-radius: 0% 0% 0% 50%;
   border: none;
   background-color: #ff3e3e;
   color: white;
   font-size: 2rem;
-  line-height: 7.5rem;
+  height: 50%;
 }
 
 .ClearANDResetDiv .ResetAllData:hover {
@@ -65,21 +64,19 @@
 .result-container {
   text-align: right;
   display: flex;
-  height: 205px;
   width: 37.5rem;
   border-radius: 50px;
   background: radial-gradient(circle, #5c8b59 100%, #75a47f 0%);
   box-shadow: 0 2px 20px 5px rgba(0, 0, 0, 0.5);
   margin-left: 3.5rem;
-  position: absolute;
-  top: 3em;
+  margin-top: 2rem;
+  margin-bottom: 2rem
 }
 
 .result-container h1 {
-  height: 165px;
   color: #fff;
   font-family: Arcade;
-  font-size: 200px;
+  font-size: 50px;
   line-height: 100%;
   text-align: right;
   width: 100%;
@@ -87,6 +84,7 @@
   word-break: break-all;
   word-wrap: break-word;
   text-shadow: 0px 2px 7px #000000;
+  margin-left: -5rem;
 }
 
 #calculator {
@@ -99,13 +97,11 @@
 
 .buttons1,
 .buttons2 {
-  margin-top: 17rem;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(4, 1fr);
   grid-column-gap: 2rem;
   grid-row-gap: 2rem;
-
   justify-items: center;
 }
 
