--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,12 @@
 
 * {
   font-family: Arcade;
-
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none;           /* Non-prefixed version, currently supported by any browser but < IE9 */
 }
 
 #center {
@@ -24,11 +29,10 @@
   background-color: #1a2e4f;
   box-shadow: 0 30px 31px 8px rgba(0, 0, 0, 0.5);
   text-overflow: hi;
-
 }
 
 .ClearANDResetDiv {
-  width: 10%;
+  width: 3.5rem;
 }
 
 .ClearANDResetDiv .clearinput {
@@ -40,6 +44,7 @@
   font-size: 2.5rem;
   height: 50%;
 }
+
 
 .ClearANDResetDiv .clearinput:hover {
   background-color: #cf3232;
